[gd_scene load_steps=3 format=3 uid="uid://jmbybekwvead"]

[ext_resource type="Script" uid="uid://d0qkcvt665q5e" path="res://NetworkingClient.gd" id="1_rlsr6"]
[ext_resource type="PackedScene" uid="uid://b81k73kbrjw18" path="res://scenes/game_select.tscn" id="2_n05k4"]

[node name="Networking" type="Node"]
script = ExtResource("1_rlsr6")

[node name="Lobby" type="Node2D" parent="."]
visible = false

[node name="ConnectBtn" type="Button" parent="Lobby"]
visible = false
offset_left = 437.0
offset_top = 166.0
offset_right = 619.0
offset_bottom = 243.0
text = "Connect"

[node name="DisconnectBtn" type="Button" parent="Lobby"]
visible = false
offset_left = 437.0
offset_top = 261.0
offset_right = 619.0
offset_bottom = 338.0
text = "Disconnect"

[node name="GameSelect" parent="." instance=ExtResource("2_n05k4")]

[connection signal="pressed" from="Lobby/ConnectBtn" to="." method="_on_connect_btn_pressed"]
[connection signal="pressed" from="Lobby/DisconnectBtn" to="." method="_on_disconnect_btn_pressed"]
[connection signal="pressed" from="GameSelect/Canaan_4_Player" to="." method="_on_canaan_4_player_pressed"]

[editable path="GameSelect"]
